--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@
     </nav>
     <div class="first1">
     <a id="gointro"></a>
-    <h1 class="rose" style="text-shadow: 8px 8px 8px #dd5fed;">Pamon</h1>
-    <h4 class="dec" style="text-shadow: 5px 5px 8px #ed5f79;">Serving the needs</h4>
+    <h1 class="rose">Pamon</h1>
+    <h4 class="dec">Serving the needs</h4>
     <h6 class="small">
       <a href="#Click here" class="small">
           <button type="button" class="btn btn-warning">Surprise</button>
@@ -117,17 +117,17 @@
   <div class="container">
     <div class="card">
       <div class="row">
+         <div class="col-md-6">
+          <img src="tv.jpg" class="image">
+          <div class="middle">
+            <button type="button" class="btn btn-primary" data-toggle="popover" data-trigger="focus" data-placement="left" title="Terms And Conditions" data-content="Offer is Limited till stock ends Offeris valid till 01 June 2020">Know more</button>
+          </div>
+        </div>
         <div class="col-md-6">
           <div class="card-block">
             <h2 class="card-title cen" style="text-align: center; padding-top: 8%; padding-bottom: 12%;">Samsung 50" UHD 4K Smart TV NU7090 Series 7</h2>
             <h3 class="card-text strike cen" style="padding-bottom: 8%">$1499</h3>
             <h3 class="card-text cen">$1999</small></h3>
-          </div>
-        </div>
-        <div class="col-md-6">
-          <img src="tv.jpg" class="image">
-          <div class="middle">
-            <button type="button" class="btn btn-primary" data-toggle="popover" data-trigger="focus" data-placement="left" title="Terms And Conditions" data-content="Offer is Limited till stock ends Offeris valid till 01 June 2020">Know more</button>
           </div>
         </div>
         </div>
@@ -510,7 +510,7 @@
     <div style="text-align: right; font-size: 1.5rem">
     <footer class="blockquote-footer" style="color: #e30e31">Copyright Information</footer>
     <div>
-      <img src="logo.jpg" width="50rem" height="50rem">
+      <img src="Logo.jpg" width="50rem" height="50rem">
     </div>
     <div style="font-size: 2rem; font-weight: 500; color: #c90657">
       Pamon
