--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
         <div class="col-md-6">
           <img src="ac.jpg" class="image">
           <div class="middle">
-            <button type="button" class="btn btn-primary" data-toggle="popover" data-trigger="focus" title="Terms And Conditions" data-content="Offer is Limited till stock ends Offeris valid till 01 June 2020">Know more</button>
+            <button type="button" class="btn btn-primary" data-toggle="popover" data-trigger="focus" title="Terms And Conditions" data-content="Offer is Limited till stock ends and is valid till 01 June 2020">Know more</button>
           </div>
         </div>
         <div class="col-md-6">
@@ -120,7 +120,7 @@
          <div class="col-md-6">
           <img src="tv.jpg" class="image">
           <div class="middle">
-            <button type="button" class="btn btn-primary" data-toggle="popover" data-trigger="focus" data-placement="left" title="Terms And Conditions" data-content="Offer is Limited till stock ends Offeris valid till 01 June 2020">Know more</button>
+            <button type="button" class="btn btn-primary" data-toggle="popover" data-trigger="focus" data-placement="left" title="Terms And Conditions" data-content="Offer is Limited till stock ends and is valid till 01 June 2020">Know more</button>
           </div>
         </div>
         <div class="col-md-6">
@@ -142,7 +142,7 @@
         <div class="col-md-6">
           <img src="oven.jpg" class="image">
           <div class="middle">
-            <button type="button" class="btn btn-primary" data-toggle="popover" data-trigger="focus" title="Terms And Conditions" data-content="Offer is Limited till stock ends Offeris valid till 01 June 2020">Know more</button>
+            <button type="button" class="btn btn-primary" data-toggle="popover" data-trigger="focus" title="Terms And Conditions" data-content="Offer is Limited till stock ends and is valid till 01 June 2020">Know more</button>
           </div>
         </div>
         <div class="col-md-6">
